Add isConfigured to steps and triggers and enable dynamic form generation from json-schema
